app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-springboot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-springboot-app
  template:
    metadata:
      labels:
        app: my-springboot-app
    spec:
      containers:
      - name: my-springboot-app-container
        image: muratdockerd/app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
