app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  selector:
    app: my-springboot-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
