my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.test  # Hangi domain ile erişmek istiyorsun?
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-service # Gitmek istediğin servisin adı
            port:
              number: 8081 # Servisinin portu
